<resources>
    <string name="app_name">Mezgebe Cloud POS</string>
    <string name="Reports">Reports</string>
    <string name="Today">Today</string>
    <string name="Counter">Counter</string>
    <string name="Items">Items</string>
    <string name="More">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_income_this_week">Expense-Income (This Week)</string>
    <string name="items_and_subitems">Items and SubItems</string>
    <string name="low_stocks">Low Stocks</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Business Type</string>
    <string name="business_address">Business Address</string>
    <string name="location">Location</string>
    <string name="currency">Currency</string>
    <string name="i_agree_with_terms_and_agreement">I agree with terms and agreement</string>
    <string name="select_your_region">Select Your Region</string>
    <string name="select_your_city">Select Your City</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_business_type">Select Business Type</string>
    <string name="save">Save</string>
    <string name="v_1_0">V 1.0</string>
    <string name="ex_apple">Ex: Apple</string>
    <string name="category">Category</string>
    <string name="ex_fruits">Ex: Fruits</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="sell_by">Sell By</string>
    <string name="item_profile_picture">item profile picture</string>
    <string name="new_sales">New Sales</string>
    <string name="add_new_item">ADD MORE ITEM</string>
    <string name="charge">CHARGE</string>
    <string name="clear">CLEAR</string>
    <string name="_0_00">0.00</string>
    <string name="grand_total">Grand Total</string>
    <string name="birr_0_00">Birr 0.00</string>
    <string name="low_stock_inventory">LOW STOCK INVENTORY</string>
    <string name="_0">0</string>
    <string name="remaining_stocks">ALL REMAINING STOCKS</string>
    <string name="number_of_sales">NUMBER OF SALES</string>
    <string name="total_tax">TOTAL TAX</string>
    <string name="profit">PROFIT ( SALES - COST )</string>
    <string name="total_sales">TOTAL SALES</string>
    <string name="today">Today: 09 Apr</string>
    <string name="near_expiry_items">NEAR-EXPIRY ITEMS</string>
    <string-array name="Business_type">
        <item>Retail</item>
        <item>Restaurant</item>
        <item>Wholesale</item>
        <item>Trader</item>
        <item>Service</item>
        <item>Fast Food</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_low_stock_inventory_items">LowStockInventoryItems</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_low_stock_item_list">lowStockItemList</string>
    <string name="what_do_you_want_to_sell">what do you want to sell?</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="all_items">All Items</string>
    <string name="all_categories">All Categories</string>
    <string name="go_to_counter">GO TO COUNTER</string>
    <string name="Business_Deleted_Successfully">Business Deleted Successfully</string>
    <string name="failed_business_not_deleted">FAILED, Business not deleted</string>
    <string name="business_updated_successfully">Business Updated Successfully !!</string>
    <string name="failed_business_not_updated">FAILED!! Business not updated</string>
    <string name="business_doesn_exists_not_updated">Business Does not exists, NOT Updated!!</string>
    <string name="please_fill_out_all_the_field">Please Fill out all the Field</string>
    <string name="business_created_successfully">Business Created Successfully</string>
    <string name="task_failed">Task Failed</string>
    <string name="business_already_exists_not_saved">Business already exists, NOT SAVED!!</string>
    <string name="select_country">Select Country</string>
    <string name="user_loging_out">User Logging Out</string>
    <string name="error_in_retriving">error while retrieving Business List</string>
    <string name="permission_needed">You need Camera Permission to Read Bar Code</string>
    <string name="camera_init_error">Camera initialization error:</string>
    <string name="barcode_scanner">BarCode Scanner</string>
    <string name="login_failed">Login Error, please try again</string>
    <string name="google_signup_failed">Google Sign up Failed!!\"</string>
    <string name="categ_saved">category saved</string>
    <string name="category_already_exist">Category name already exists, please use a unique category name</string>
    <string name="warning_for_itemName_edit">Are You sure? , Editing Item Name of a Variant Item Will Create a new Item Variant, not a variant of</string>
    <string name="add_category_pls">No Category is Added, please add Category and try again</string>
    <string name="add_now">Add Now</string>
    <string name="variant_added">Variant added successfully</string>
    <string name="variant_alread_exist">Variant name already exists, please use a unique variant name</string>
    <string name="update_success">Variant Updated successfully</string>
    <string name="item_not_found">Item not found</string>
    <string name="item_exist_already">ERROR, Item already exist!!</string>
    <string name="new_variant_added">You have added a new item variant</string>
    <string name="variant_deleted">Variant Deleted successfully</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="item_updated">Item Successfully Updated</string>
    <string name="unit">Unit</string>
    <string name="fraction">Fraction(in KG)</string>
    <string name="staff_added">Staff added successfully</string>
    <string name="failed_to_addStaff">Failed!!, Staff is NOT added</string>
    <string name="add_role_pls">Please Select Staff Previlege</string>
    <string name="are_you_sure_to_update">Are You sure? Staff Will be Updated Permanently</string>
    <string name="staff_updated">Staff Updated successfully\"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_staff">Empty!!, no Staff Member is added</string>
    <string name="signin_failed">Sign In Failed</string>
    <string name="update_succes" >Category Updated Successfully</string>
    <string name="update_failed" >Category Update FAILED</string>
    <string name="item_added">Item Added Successfully</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="add_staff">Add Staff</string>
    <string name="simple_mode">Simple Mode</string>
    <string name="adv_mode">Advanced Mode</string>
    <string name="sign_in_wiz_google">Sign in With Google</string>
    <string name="sign_in_with_phone">Sign in With Phone</string>
    <string name="staff_name">Staff Name</string>
    <string name="email">Email</string>
    <string name="staff_privilege">Staff Privilege</string>
    <string name="business_owner">Business Owner</string>
    <string name="sales_clerk">Sales Clerk</string>
    <string name="add_new_staff">Add New Staff</string>
    <string name="_add_new_item">Add New Item</string>
    <string name="variant_name">Variant Name</string>
    <string name="selling_price">Selling Price</string>
    <string name="staff_already_exist">Staff Already Exist Please use unique Email</string>
    <string name="cost_price">Cost Price</string>
    <string name="put_expirydate">Pick Expiry Date</string>
    <string name="exp_reminder">Remind Before</string>
    <string name="add_tax">Add Tax?</string>
    <string name="tax_in_perc">Tax in %</string>
    <string name="add_barcode">Add BarCode?</string>
    <string name="enter_barcode">Enter BarCode</string>
    <string name="scan">Scan</string>
    <string name="add_category">Add Category</string>
    <string name="mezgebe_cloud_pos">Mezgebe Cloud POS</string>
    <string name="manage_business">Manage Business Info</string>
    <string name="switch_business">Switch Business</string>
    <string name="crt_business">Create Business</string>
    <string name="no_pending_sales">No Pending Sales:</string>
    <string name="stock_avail">Stock Available</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="language">Language</string>
    <string name="staff_management">Staff Management</string>
    <string name="general_settings">General Settings</string>
    <string name="logout">Logout</string>
    <string name="nothing_to_show">Nothing To Show Here!!</string>
    <string name="Sales_is_Successfully_Registered">Sales is Successfully Registered</string>
    <string name="would_u_like_receipt">Would you like to generate a Receipt?</string>
    <string name="track_expiry">Track Expiry Date?</string>
    <string name="category_cantbe_deleted">Can\'t Delete This Catogory contains Items</string>
    <string name="add_Variant">Add Variant</string>
    <string name="profit1">Total Profit</string>
    <string name="total_profit">Total Profit</string>
</resources>

