<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/reports"
       android:title="@string/Reports"
       android:icon="@drawable/ic_reports"
       app:cnb_backgroundColor="@color/my_color"
       app:cnb_textColor="@color/white"
       app:cnb_iconColor="@color/white"
       />
    <item android:id="@+id/today"
        android:title="@string/Today"
        android:icon="@drawable/ic_today_income"
        app:cnb_backgroundColor="@color/my_color"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white" />

    <item android:id="@+id/counter"
        android:title="@string/Counter"
        android:icon="@drawable/ic_counter"
        app:cnb_backgroundColor="@color/my_color"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"/>
    <item android:id="@+id/items"
        android:title="@string/Items"
        android:icon="@drawable/ic_items"
        app:cnb_backgroundColor="@color/my_color"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
       />
   <item android:id="@+id/more"
        android:title="@string/More"
        android:icon="@drawable/ic_more"
       app:cnb_backgroundColor="@color/my_color"
       app:cnb_textColor="@color/white"
       app:cnb_iconColor="@color/white"/>
</menu>