<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageCategoryDetail"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="139dp"
        android:layout_height="121dp"
        android:src="@drawable/ic_category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gray_round_shape"
        android:contentDescription="categoryIcon" />

    <RelativeLayout
        android:id="@+id/addCatagSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gray_round_shape"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_category_name"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/categoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/txt"
            android:background="@drawable/purple_round_shape"
            android:padding="5dp"
            android:textColor="@color/black"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCatagSpace"
        android:text="@string/update"
        android:textColor="@color/white"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCatagSpace"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addCatagSpace"
        android:layout_alignParentRight="true"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />




</RelativeLayout>