<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">

    <TextView
        android:id="@+id/paymentMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/item_name"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:lines="1"
        />
    <TextView
        android:id="@+id/numberOfItemsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_below="@+id/paymentMode"
        android:textColor="@color/white"
        android:layout_marginEnd="5dp"
        android:textStyle="bold|italic"
        android:text="1x"

        />

    <TextView
        android:id="@+id/unitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/numberOfItemsTxt"
        android:layout_below="@+id/paymentMode"
        android:text="@string/_0_00"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/TotalItemSellingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/paymentMode"
        android:text="@string/birr_0_00"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/black"
        android:layout_below="@+id/TotalItemSellingPrice"
        />



</RelativeLayout>